# real-crtp

./: .gitignore  CMakeLists.txt  crtp.hpp  main.cpp  normal.hpp
